# qallet

./: .dockerignore  .gitignore  ASSETS-LICENSE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-COMMERCIAL.md  NOTICE.md  README.md  REVIEW.md  SETUP.md  TRADEMARK.md  deny.toml  package-lock.json  package.json
.github/workflows/: android-release.yml  ci.yml
app/src/: Cargo.toml  Trunk.toml  index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  lib.rs  main.rs
app/src/src/: app.rs  bridge.rs  main.rs  tokens.rs
app/src/styles/: main.css
audit-reports/: 2026-04-25-full-audit-kimi-k2.5.md
crates/api/: Cargo.toml  Dockerfile
crates/api/src/: handlers.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: convert.rs  explorer.rs  lib.rs  sign.rs  wallet.rs
crates/rustok-mobile-bindings/: Cargo.toml
crates/rustok-mobile-bindings/src/: error.rs  handle.rs  lib.rs  types.rs
crates/rustok-mobile-bindings/tests/: analyze_transaction.rs  encoding.rs  error_taxonomy.rs  wallet_lifecycle.rs
crates/txguard/src/: types.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
deploy/: Caddyfile  docker-compose.yml
deploy/rpc-proxy/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
deploy/rpc-proxy/src/: index.ts
docs/: ANDROID-RELEASE.md  COMPONENTS.md  LEPTOS-GUIDE.md  M3-RETROSPECTIVE.md  M4-PROGRESS.md  M4-TASK-DESCRIPTION.md  MOBILE.md  NATIVE-MIGRATION-PLAN.md  NEXT-SESSION-TZ.md  PHASE-2-CONSTRAINTS.md  PHASE2-HANDOFF.md  PHASE2-LEPTOS-TAURI.md  PHASE3-DESIGN-APPSHELL.md  PLAN-ANDROID-FIX-2026-04-26.md  POC-FOUNDATION.md  REDESIGN-AUDIT.md  REDESIGN.md  REVIEWER-CONSTITUTION.md  SESSION-NEXT.md  SESSION.md  SWAP-INTEGRATION-PLAN.md  TECHNICAL.md  TESTING.md  VISION.md
docs/video/: EP1-why-rust.html  EP1-why-rust.md  SERIES-PLAN.md  slides.html
mobile/: App.tsx  global.css  jest.config.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
mobile/__mocks__/: styleMock.js
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/src/components/: Button.tsx  Input.tsx  Modal.tsx  PageHeader.tsx  Spinner.tsx  Switch.tsx  ThemeProvider.tsx  Toast.tsx  index.ts
(+46 files in other folders)
