[package]
name = "rustok-mobile-bindings"
description = "Mobile FFI bindings for rustok-core via uniffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
rustok-core = { path = "../core" }
rustok-types = { path = "../types" }
txguard = { path = "../txguard" }
uniffi = "=0.31.0"
thiserror = { workspace = true }
tracing = { workspace = true }
alloy-primitives = { workspace = true }
alloy-network = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
