[package]
name = "rustok-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared DTO types for Rustok core ↔ frontend communication"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
